added expt 4 discussion

--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -737,34 +737,34 @@ Such a representational coercion story raises serious problems for the semantics
 %
 %In addition to the host of issues such a representational coercion story raises for the semantics of plural definite descriptions \citep[for discussion, see ][]{link1983,landman1989,schwarzschild1996,link1998}, the success of our speaker knowledge manipulation speaks directly against it: participants give similarly high distributive endorsement ratings for \emph{heavy} in ``inspect'' scenarios and similarly low distributive endorsement ratings for \emph{heavy} in ``move'' scenarios, regardless of the variability of context. In other words, the speaker knowledge manipulation, which suppresses information about individual set members in ``move'' scenarios, affects random and regular contexts similarly. If regular contexts forced reanalysis of \emph{the boxes} as an assemblage like \emph{the pile}, we would not expect ``move'' vs.~``inspect'' scenarios to privilege or dis-privilege access to information about individual set members; there would only be a single individual available in context.
 
-Taken together, our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more likely; and without epistemic support, distributive interpretations become less likely. These findings support a pragmatic account of stubborn distributivity according to which ostensibly stubbornly distributive predicates are such because the properties they name are unpredictable, or unstable in most contexts. Before formalizing the role of context in the interpretation of plural predication using tools from probabilistic modeling, we probe the generalizability of our findings in one last experiment.
+Taken together, our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more likely; and without epistemic support, distributive interpretations become less likely. These findings support a pragmatic account of stubborn distributivity according to which ostensibly stubbornly distributive predicates are such because the properties they name are unpredictable, or unstable in most contexts. In the next experiment we probe the generalizability of our findings.
 
 %Next, we formalize the role of context in this choice of interpretation using a Bayesian Rational Speech-Act model \citep{frankgoodman2012,lassitergoodman2013}. Noisy (i.e., more variable) interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely. Similarly, listeners are less likely to assume interpretations for which speakers lack knowledge.
 
 
 \section{Experiment 4: Generalizing our findings}
 
-In Expt.~3 we looked at the role of contextual predictability in interpretation choice for three adjectives of English: \emph{big}, \emph{heavy}, and \emph{tall}. One might worry that the observed success of our contextual manipulation is an artifact of the small set of adjectives we %have so-far 
+In Expt.~3, we looked at the role of contextual predictability in interpretation choice for three adjectives of English: \emph{big}, \emph{heavy}, and \emph{tall}. One might worry that the observed success of our contextual manipulation is an artifact of the small set of adjectives we %have so-far 
 tested, and might not generalize to a broader set of adjectives. Therefore, to test the generalizability of the findings from Expt.~3, we recycled the design on a much broader set of 25 dimensional adjectives.
 
 \subsection{Participants}
 
-We recruited 54 participants through Amazon's Mechanical Turk. Participants were compensated for participation.
+We recruited 54 participants through Amazon's Mechanical Turk. Participants were compensated for their participation.
 
 \subsection{Design and methods}
 
-The experimental design was near-identical to that of Expt.~3: participants were introduced to Cubert, who was tasked with ``moving'' boxes that he received from a dispenser in the ceiling (there was no ``inspect'' condition). Between subjects, we manipulated the variability of the \textsc{context} (``regular'' vs.~``random'') by having the dispenser either stack boxes on top of each other or dispense them in a random phsyical arrangement. Participants saw a series of four context priming scenarios to demonstrate the behavior of the dispenser; we used the same context priming scenarios from Expt.~3.
+The experimental design was near-identical to that of Expt.~3. Two aspects of the design differed: there was no ``move'' vs.~``inspect'' scenario manipulation, and participants provided paraphrase endorsements for 25 rather than three predicates. At the outset of the experiment, participants were introduced to Cubert, who was tasked with ``moving'' boxes that he received from a dispenser in the ceiling (there was no ``inspect'' condition). Between subjects, we manipulated the variability of the \textsc{context} (``regular'' vs.~``random'') by having the dispenser either stack boxes on top of each other or dispense them in a random phsyical arrangement. Participants saw a series of four context priming scenarios to demonstrate the behavior of the dispenser; we used the same context priming scenarios from Expt.~3.
 
-After observing the dispenser, participants were instructed to help Cubert's friend, Dot, understand Cubert's statements about the boxes he moved. To do so, they saw an utterance and rated potential paraphrases on a sliding scale; the paraphrases were either distributive (with ``each'') or collective (with ``together''). Participants provided paraphrases endorsements for each of the adjectives in Table \ref{dimensional-adjs}. We arrived at the set of adjectives in Table \ref{dimensional-adjs} by extracting every unique adjective appearing in an ``A A N" NP from the Penn Treebank subset of the Switchboard corpus; there were 350 unique adjectives. Then, adjectives were independently coded according to semantic classes from the literature \citep[e.g.,][]{dixon1982}. Among this set there were 24 unique dimensional adjectives; to those 24 we added the weight adjective \emph{heavy}.
+After observing the dispenser, participants were instructed to help Cubert's friend, Dot, understand Cubert's statements about the boxes he moved. To do so, they saw an utterance and rated potential paraphrases on a sliding scale; the paraphrases were either distributive (with ``each'') or collective (with ``together''). Participants provided paraphrase endorsements for each of the adjectives in Table \ref{dimensional-adjs}. We arrived at the set of adjectives in Table \ref{dimensional-adjs} by extracting every unique adjective appearing in an ``A A N" NP from the Penn Treebank subset of the Switchboard corpus; there were 350 unique adjectives. Then, adjectives were independently coded according to semantic classes from the literature \citep[e.g.,][]{dixon1982}. Among this set there were 24 unique dimensional adjectives; to those 24 we added the weight adjective \emph{heavy}.
 
-Participants completed 25 trials in a random order. For the analyses reported below we included data from the 51 participants who indicated that their native language was English.
+Participants completed 25 trials in a random order, one trial for each adjective. For the analyses reported below, we included data from the 51 participants who indicated that their native language was English.
 
 \begin{table}
 	\centering
-	\caption{Adjectives, modified dimensions, and valences tested in Expt.~4.}
+	\caption{Adjectives, modified dimensions, and polaritys tested in Expt.~4.}
 	\label{dimensional-adjs}
 \begin{tabular}{lll} \toprule
- 	\textsc{adjective}	&	\textsc{dimension}	&	\textsc{valence} \\ \midrule
+ 	\textsc{adjective}	&	\textsc{dimension}	&	\textsc{polarity} \\ \midrule
 	full				&	capacity			&	positive	\\
 	deep				&	depth				&	positive	\\
 	flat				&	height				&	negative	\\
@@ -796,24 +796,37 @@ Participants completed 25 trials in a random order. For the analyses reported be
 
 \subsection{Results}
 
-Fig.\ \ref{resultsexpt4} displays the collective paraphrase endorsement ratings averaged across all trials with bootstrapped 95\% confidence intervals; higher rates of endorsement for the collective paraphrase signal greater rates of collective interpretation. We grouped data by the dimension modified as well as its valence.
+Fig.\ \ref{resultsexpt4} displays the paraphrase endorsement ratings averaged across all trials with bootstrapped 95\% confidence intervals; higher paraphrase endorsement ratings indicate greater rates of the relevant interpretation. We grouped data by the dimension modified, together with adjective polarity.
 
 %\ndg{our predictions really are about effect of manipulations on predicates separately, and we don't care much about predicate directly.... so how about doing three separate regressions, one for each predicate? this should be easier to interpret. equivalently we could leave out the main effect predictors for scenario and context, leaving only the interaction terms with predicate. }
 
-\begin{figure}[h!]
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=1.05\linewidth]{plots/expt4.eps} 
 	\vspace{-35pt}
 	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~4.}\label{resultsexpt4}
 \end{figure}
 
-For each dimension, we fit a linear regression model predicting collective endorsement ratings by \textsc{context} (``random'' vs.~``regular'') and \textsc{trial} order; for those dimensions with both positive and negative adjectives (i.e., height, size, and width), models additionally included the \textsc{valence} predictor and the interaction between \textsc{context} and \textsc{valence}.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial), given the strong negative correlation between the two endorsement ratings ($r=-0.49$).} The full regression models appear in \ref{expt4results}.
+For each dimension, we fit a linear regression model predicting collective endorsement ratings by \textsc{context} (``random'' vs.~``regular'') and \textsc{trial} order; for those dimensions with both positive and negative adjectives (i.e., the height, size, and width dimensions), models additionally included the \textsc{polarity} predictor and the interaction between \textsc{context} and \textsc{polarity}.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial), given the strong negative correlation between the two endorsement ratings ($r=-0.49$). The single exception is the marginally significant effect of \textsc{context} for the capacity adjective \emph{full}, which holds marginally for the collective endorsement ratings but not for the normalized ratings. We return to this point below.} The full regression models appear in \ref{expt4results}.
 
-We begin with a look at the dimensions with only positive-valence instances. For \textbf{capacity} adjectives, the model found a marginally significant effect of \textsc{context} ($\beta$ = 0.16, $SE$ = 0.08, $t$ = 1.95, p $<$ 0.06), such that regular contexts tended to have more collective interpretations than did random contexts. There was no significant effect of \textsc{context} for \textbf{depth} ($\beta$ = 0.07, $SE$ = 0.09 $t$ = 0.85, p $<$ 0.40), \textbf{length} ($\beta$ = 0.01, $SE$ = 0.06, $t$ = 0.15, p $<$ 0.89), or \textbf{weight} ($\beta$ = -0.04, $SE$ = 0.07, $t$ = -0.51, p $<$ 0.62) adjectives.
+We begin with a look at the dimensions with only positive-polarity instances. For \textbf{capacity} adjectives, the model found a marginally significant effect of \textsc{context} ($\beta$ = 0.16, $SE$ = 0.08, $t$ = 1.95, p $<$ 0.06), such that regular contexts tended to have more collective interpretations than did random contexts. However, repeating the analysis for the normalized endorsement ratings, we fail to find any effect effect of \textsc{context} ($\beta$ = -0.14, $SE$ = 0.13, $t$ = -1.04, p $<$ 0.31). There was also no significant effect of \textsc{context} for \textbf{depth} ($\beta$ = 0.07, $SE$ = 0.09 $t$ = 0.85, p $<$ 0.40), \textbf{length} ($\beta$ = 0.01, $SE$ = 0.06, $t$ = 0.15, p $<$ 0.89), or \textbf{weight} ($\beta$ = -0.04, $SE$ = 0.07, $t$ = -0.51, p $<$ 0.62) adjectives.
 
-We turn next to those dimensions with both negative- and positive-valence instances. For \textbf{height} adjectives, the model found a main effect of valence ($\beta$ = 0.28, $SE$ = 0.04, $t$ = 7.82, p $<$ 0.01), such that positive-valence height adjectives received more collective interpretations than negative-valence height adjectives. The model also found a marginally significant interaction between \textsc{context} and \textsc{valence} ($\beta$ = 0.13, $SE$ = 0.07, $t$ = 1.82, p $<$ 0.07). A post-hoc analysis revealed that this interaction was driven by a significant effect of \textsc{context} within the positive-valence height adjectives ($\beta$ = 0.12, $SE$ = 0.06, $t$ = 2.11, p $<$ 0.05): regular contexts yielded more collective interpretations. For \textbf{size} adjectives, the model found a main effect of valence ($\beta$ = 0.20, $SE$ = 0.03, $t$ = 7.60, p $<$ 0.01), such that positive-valence height adjectives received more collective interpretations than negative-valence height adjectives. The model also found a significant interaction between \textsc{context} and \textsc{valence} ($\beta$ = 0.13, $SE$ = 0.05, $t$ = 1.82, p $<$ 0.05). A post-hoc analysis revealed that this interaction was driven by a significant effect of \textsc{context} within the positive-valence size adjectives ($\beta$ = 0.10, $SE$ = 0.04, $t$ = 2.21, p $<$ 0.05): regular contexts yielded more collective interpretations.
-For \textbf{width} adjectives, the model found a significant interaction between \textsc{context} and \textsc{valence} ($\beta$ = -0.14, $SE$ = 0.07, $t$ = -2.02, p $<$ 0.05). A post-hoc analysis revealed that this interaction was driven by a significant effect of \textsc{context} within the \emph{negative}-valence width adjectives ($\beta$ = 0.13, $SE$ = 0.05, $t$ = 2.66, p $<$ 0.01): regular contexts yielded more collective interpretations.
+We turn next to those dimensions with both negative- and positive-polarity instances. For \textbf{height} adjectives, the model found a main effect of polarity ($\beta$ = 0.28, $SE$ = 0.04, $t$ = 7.82, p $<$ 0.01), such that positive-polarity height adjectives received more collective interpretations than negative-polarity height adjectives. The model also found a marginally significant interaction between \textsc{context} and \textsc{polarity} ($\beta$ = 0.13, $SE$ = 0.07, $t$ = 1.82, p $<$ 0.07); we found the same marginally significant interaction in an analysis of the normalized endorsement ratings ($\beta$ = -0.25, $SE$ = 0.13, $t$ = -1.96, p $<$ 0.06). A post-hoc analysis revealed that this interaction was driven by a significant effect of \textsc{context} within the positive-polarity height adjectives ($\beta$ = 0.12, $SE$ = 0.06, $t$ = 2.11, p $<$ 0.05): regular contexts yielded more collective interpretations. For \textbf{size} adjectives, the model found a main effect of polarity ($\beta$ = 0.20, $SE$ = 0.03, $t$ = 7.60, p $<$ 0.01), such that positive-polarity height adjectives received more collective interpretations than negative-polarity height adjectives. The model also found a significant interaction between \textsc{context} and \textsc{polarity} ($\beta$ = 0.13, $SE$ = 0.05, $t$ = 1.82, p $<$ 0.05). A post-hoc analysis revealed that this interaction was driven by a significant effect of \textsc{context} within the positive-polarity size adjectives ($\beta$ = 0.10, $SE$ = 0.04, $t$ = 2.21, p $<$ 0.05): regular contexts yielded more collective interpretations.
+For \textbf{width} adjectives, the model found a significant interaction between \textsc{context} and \textsc{polarity} ($\beta$ = -0.14, $SE$ = 0.07, $t$ = -2.02, p $<$ 0.05). A post-hoc analysis revealed that this interaction was driven by a significant effect of \textsc{context} within the \emph{negative}-polarity width adjectives ($\beta$ = 0.13, $SE$ = 0.05, $t$ = 2.66, p $<$ 0.01): regular contexts yielded more collective interpretations.
 
+
+\subsection{Discussion}
+
+We have replicated the findings from Expt.~3 with a broader set of adjectives: \emph{tall} and the three other positive-polarity height adjectives are affected by the contextual manipulation such that more predictable, ``regular'' contexts yield greater rates of collective interpretations; \emph{big} and the four other positive-polarity size adjectives show the same effect of context. Moreover, the complaisantly collective weight adjective \emph{heavy} continues to be unaffected by our contextual manipulation, which does little to increase the contextual predictability of the already-predictable collective weight. This replication serves double duty, first as a sanity check for comparing the results of Expt.~3 with the current experiment, and second as confirmation that the context effect observed in Expt.~3 generalizes beyond the specific lexical items that we tested. 
+
+In addition to replicating the effect of contextual predictability with a broader set of adjectives, we tested four more physical dimensions, as well as adjective polarity. Among the dimensions with only positive-polarity instances (i.e., capacity, depth, and length adjectives), none showed a reliable effect of our contextual manipulation. Thus, stacking boxes on top of each other failed to deliver greater rates of collective interpretations for adjectives modifying box capacity (i.e., \emph{full}), depth (i.e., \emph{deep}), or length (i.e., \emph{long}, \emph{lengthy}).\footnote{One might worry that \emph{lengthy} in fact modifies a temporal dimension (e.g., \emph{the conversations were lengthy}) that cannot felicitously be attributed to boxes. Still, all of the reported results hold if instead we analyze \emph{long} and \emph{lengthy} separately: neither is affected by our contextual manipulation.} 
+From this it would appear that generally regularizing physical arrangements is insufficient to deliver collective interpretations; rather, the dimension that the interpretation would target must be regularized. Given that stacking boxes plausibly regularizes collective height, size (to the extent that height factors into size), and width, it stands to reason that only these dimensions showed effects of our contextual manipulation. However, there is more to this story, because these dimensions showed sensitivity to our contextual manipulation according to their polarity.
+
+Within the dimensions that showed clear effects of our contextual manipulation, positive---but not negative---height and size adjectives, and negative---but not positive---width adjectives had increased collective interpretations with increased contextual predictability. The strong influence of polarity highlights an important aspect of the pragmatics of utterance disambiguation that we have so far ignored: interpretations that are unlikely to be true are unlikely to be chosen---cooperative speakers do not intentionally utter false statements \citep{grice1975}. Take the case of negative-polarity height adjectives like \emph{short} or \emph{flat}. It seems unlikely that Cubert would intend to communicate that a stack of boxes taller than him is collectively short when the distributive alternative is available, namely that each box is short. Stacking boxes may remove barriers to the collective interpretation by increasing the predictability of the collective property, but it creates its own barriers by highlighting that the collective property is unlikely to satisfy the truth conditions of the predicate.
+
+It could be the case that negative-polarity dimensional adjectives are truly stubbornly distributive; the lack of a contextual effect for negative height and size adjectives would follow from this peculiarity of their lexical semantics. But then we should find the same pattern for the width adjectives, when in fact we find exactly the opposite pattern: an effect of context for the negative---but not positive---width adjectives like \emph{narrow}.  Again, the most straightforward interpretation of this pattern relies on the avoidance of false interpretations. Cubert most likely would not have intended to describe a tall, thin set of stacked boxes as collectively \emph{wide} (or \emph{fat} or \emph{thick}) when the distributive interpretation stands as a ready alternative. However, the reverse holds for \emph{narrow} and the other negative width adjectives: stacking the boxes on top of each other both increases the predictability of their collective width and focuses attention on their narrowness, that is, on the truth of the collective interpretation.
+
+The results of the current experiment thus add nuance to our claims about contextual predictability. We continue to find that collective interpretations depend on the contextual predictability of collective properties, such that increasing predictability by regularizing arrangements increases rates of collective interpretations. However, to increase predictability one must regularize the specific dimension under discussion (e.g., the height dimension for \emph{tall} but not \emph{long}, or the width dimension for \emph{narrow} but not \emph{deep}). Moreover, we have observed that contextual predictability interacts with yet another aspect of the pragmatic calculus that influences interpretation choice, namely the probability that a specific interpretation would truthfully describe a state of affairs. When an interpretation appears unlikely to be true (e.g., describing a tall stack of boxes as collectively short), listeners are unlikely to attribute that interpretation to speakers' utterances. We next formalize the role of context in the interpretation of plural predication, using tools from probabilistic modeling.
 
 %Next, we formalize the role of context in this choice of interpretation using a Bayesian Rational Speech-Act model \citep{frankgoodman2012,lassitergoodman2013}. Noisy (i.e., more variable) interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely. Similarly, listeners are less likely to assume interpretations for which speakers lack knowledge.
 
@@ -1376,11 +1389,11 @@ Table \ref{expt3analysis} presents model coefficients for the full linear regres
 
 \section{Full linear regression models from Expt.~4}\label{expt4results}
 
-Tables \ref{expt4analysisa} and \ref{expt4analysisa} present model coefficients for the full linear regression models used in the analysis of Expt.~4. For each dimension, the models predict collective endorsement ratings from fixed effects for context and trial; for those dimensions with both positive- and negative-valence adjectives, the models also included fixed effects of valence and the interaction between valence and context. The fixed effects predictors were centered before analysis.
+Tables \ref{expt4analysisa} and \ref{expt4analysisa} present model coefficients for the full linear regression models used in the analysis of Expt.~4. For each dimension, the models predict collective endorsement ratings from fixed effects for context and trial; for those dimensions with both positive- and negative-polarity adjectives, the models also included fixed effects of polarity and the interaction between polarity and context. The fixed effects predictors were centered before analysis.
 
 \begin{table}[htb] 
 	\renewcommand\thetable{D.1}
-	\centering \caption{Full linear regression models from the positive-valence dimension analyses of Expt.~4.} \label{expt4analysisa}
+	\centering \caption{Full linear regression models from the positive-polarity dimension analyses of Expt.~4.} \label{expt4analysisa}
 	\begin{tabular}{lrrrr}\toprule
 		&	Coef $\beta$	&	SE($\beta$)	&	\multicolumn{1}{c}{ \textbf{t}}	&	\multicolumn{1}{c}{$p$}\\ \midrule
 		\emph{\textbf{capacity}} \\
@@ -1405,7 +1418,7 @@ Tables \ref{expt4analysisa} and \ref{expt4analysisa} present model coefficients 
 
 \begin{table}[htb] 
 	\renewcommand\thetable{D.1}
-	\centering \caption{Full linear regression models from the multi-valence dimension analyses of Expt.~4.} \label{expt4analysisb}
+	\centering \caption{Full linear regression models from the multi-polarity dimension analyses of Expt.~4.} \label{expt4analysisb}
 	\begin{tabular}{lrrrr}\toprule
 		&	Coef $\beta$	&	SE($\beta$)	&	\multicolumn{1}{c}{ \textbf{t}}	&	\multicolumn{1}{c}{$p$}\\ \midrule
 		\emph{\textbf{height}}\\
