--- a/writing/Cubert/revision/greg.bib
+++ b/writing/Cubert/revision/greg.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-10-19 10:22:54 -0700 
+%% Created for Greg Scontras at 2016-04-14 14:05:44 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Dixon1982,
+	Address = {Berlin},
+	Author = {Dixon, RMW},
+	Date-Added = {2016-04-14 21:05:43 +0000},
+	Date-Modified = {2016-04-14 21:05:43 +0000},
+	File = {:Users/Greg/Dropbox/Papers/Dixon 1982 adjectives.pdf:pdf},
+	Publisher = {Mouton},
+	Title = {{Where have all the adjectives gone? And other essays in semantics and syntax}},
+	Year = {1982}}
 
 @incollection{goodmanetal2015concepts,
 	Address = {Cambridge, MA},
