--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -209,7 +209,14 @@ This explanation suffers two flaws:
 First, it hypothesizes a categorical distinction that may not hold; in Expt.~2, we find a gradient of collectivity, with no clear boundary.
 Second, it leaves unexplained why some predicates would contain pluralities and others not---is there a deeper explanation in terms of the properties named?
 
-We suggest that the key underlying notion is the stability or \emph{contextual predictability} of a property when applied to a collection.
+Note that stubbornly distributive predicates like \emph{big} or \emph{tall} contrast with truly distributive predicates like \emph{be a man} or \emph{have blue eyes} whose meaning requires a distributive interpretation \citep{link1983}. Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity; (collective) size is not such a property, at least not transparently so.\footnote{Similarly, truly collective predicates like \emph{gather} or \emph{meet} name properties that require a collective interpretation by virtue of their meaning \citep{schwarzschild1994}.} There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights. 
+
+\ex. \a. The group of men has blue eyes. 
+	\b. The pile of boxes is tall.
+
+Rather than roaming the lexicon with name tags specifying their attitudes toward collective interpretations, something about these predicates or the properties they name must influence or determine their behavior in plural predication. The task at hand is to determine what that thing is.
+
+We suggest that the key underlying notion is the stability or \emph{contextual predictability} of a property when applied to a collection.\footnote{See \citeauthor{schein} (\emph{forthcoming}; ch.~4.1.1) for a similar line of reasoning; \citeauthor{schein} frames his observation in a Neo-Davidsonian event-semantic framework.}
 That is, there are aspects of context that affect the computation of collective properties, over and above those that affect the individual properties; when there is more uncertainty about these aspects of context, the collective property is less stable.
 For instance, collective \emph{tall} names the vertical extent of a set of objects, and can vary dramatically with their arrangement.
 In contrast, collective \emph{heavy} names the total weight of a set of objects, which does not vary with arrangement. 
