--- a/writing/Cubert/revision/greg.bib
+++ b/writing/Cubert/revision/greg.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2016-04-14 14:05:44 -0700 
+%% Created for Greg Scontras at 2016-04-29 13:54:17 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{schein,
+	Address = {Cambridge, MA},
+	Author = {Barry Schein},
+	Date-Added = {2016-04-29 20:53:04 +0000},
+	Date-Modified = {2016-04-29 20:54:17 +0000},
+	Publisher = {{MIT} Press},
+	Title = {`And': Conjunction Reduction Redux},
+	Year = {{Forthcoming}}}
 
 @book{Dixon1982,
 	Address = {Berlin},
