--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -523,7 +523,7 @@ We begin with a look at the range of collective endorsement ratings.\footnote{A 
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=1.04\linewidth]{plots/sentence_plot.eps}
+	\includegraphics[width=1.04\linewidth]{plots/sentence_plot_violin.eps}
 	\vspace{-20pt}
 	\caption{Collective paraphrase endorsement rates for different noun-predicate combinations in Expt.~2a (i.e., for different sentences).} \label{sentence-coll}
 \end{figure}
@@ -541,7 +541,7 @@ This analysis relies on the chance occurrence of multiple subject nouns in our s
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=.95\linewidth]{plots/noun_pred_plot.eps}
+	\includegraphics[width=.95\linewidth]{plots/noun_pred_plot_violin.eps}
 	%\vspace{0pt}
 	\caption{Collective paraphrase endorsement rates for different subject nouns grouped by predicate (Expt.~2a).} \label{noun-pred-coll}
 \end{figure}
@@ -596,7 +596,7 @@ We might take the split in behavior between \emph{heavy} on the one hand and \em
 
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width=.85\linewidth]{plots/bht_plot.eps}
+	\includegraphics[width=.85\linewidth]{plots/bht_plot_violin.eps}
 	\vspace{0pt}
 	\caption{Collective paraphrase endorsement rates for different nouns serving as the subject to the predicates \emph{big}, \emph{heavy}, and \emph{tall} (Expt.~2b).} \label{bhtcoll}
 \end{figure}
@@ -719,7 +719,7 @@ First note the qualitative effects of our two manipulations: collective interpre
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=\linewidth]{plots/expt3.eps} 
+	\includegraphics[width=\linewidth]{plots/expt3-violin.eps} 
 	\vspace{-20pt}
 	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~3.}\label{resultsexpt2}
 \end{figure}
@@ -809,7 +809,7 @@ Fig.\ \ref{resultsexpt4} displays the paraphrase endorsement ratings averaged ac
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1.05\linewidth]{plots/expt4.eps} 
+	\includegraphics[width=1.05\linewidth]{plots/expt4-violin.eps} 
 	\vspace{-35pt}
 	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~4.}\label{resultsexpt4}
 \end{figure}
